--- a/main.html
+++ b/main.html
@@ -10,6 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>Why I want to become a developer?</h1>
+	<p>There's nothing more satisfying than solving a problem that's been around for a while and nobody else knows how to solve. As a Software Developer you constantly provide solutions for users' problems. You can be working on the occasional quick fix as well as more complex strategic solutions.</p>
 
 </body>
 
